# finance-dashboard

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  TOOLS.md  alembic.ini  debug_docling.py  docker-compose.yml  extract_metrics.py  pyproject.toml  status.md
csv_parser/: filename_parser.py  hasher.py  models.py  parser.py
data/: inspect_docling.py
database/: connection.py  models.py  repositories.py
database/migrations/: env.py
docs/: README.md  filename-format.md  next_features.md  notes_for_ai_assisted_development.md  openspec-vs-agentic-workflows.md  openspec_v_agentic-workflows.md  troubleshooting.md
docs/design_strategies/: docker_v_podman_strategy.md  repository_pattern_strategy.md
docs/mermaid/: ai_assisted_development_workflow.mermaid
docs/openspec/: openspec_readme.md  openspec_workflow.md
docs/pdf_processor/: walkthrough.md
docs/prompts/: project_goals.md
docs/spec_creation_summary_docs/: pdf_to_csv_extraction
docs/version_reports/: v0.1-initial-implementation.md
grafana/dashboards/: account_overview.json  finance_dashboard.json
ingestion/: cli.py  orchestrator.py
openspec/: V0.2_OVERVIEW.md  V1.0_OVERVIEW.md  project.md
pdf_processor/: __init__.py  cli.py  exceptions.py  extractor.py  file_handler.py  models.py  router.py  validator.py
pdf_processor/processors/: __init__.py  amex.py  base.py  chase.py  citi.py  discover.py  generic.py
scripts/: README.md  process-and-view.sh
scripts/ingestion/: ingest_data.py
tests/pdf_processor/: test_e2e.py  test_extractor.py  test_file_handler.py  (+1 more)
(+53 files in other folders)
