[project]
name = "finance-dashboard"
version = "0.1.0"
description = "A local, privacy-focused personal finance dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf_processor"]
